{
    "version": 1,
    "name": "ActionMap",
    "maps": [
        {
            "name": "Knight",
            "id": "ecb81f0e-5b53-45e6-9a04-5de26a28b564",
            "actions": [
                {
                    "name": "AttackLeft",
                    "type": "Button",
                    "id": "6c5bba4d-e3da-4219-a0f3-fbbf9459db19",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "AttackRight",
                    "type": "Button",
                    "id": "6506c85a-77e8-4c4f-b769-e0fa10e5ce11",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6236a53d-6bab-421b-8330-639ed8e33686",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttackLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "23383a89-2afe-429b-8f63-25f131fa0b0a",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttackLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "922e2b59-98b0-4db3-b2da-b9a738e589c0",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttackRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d9adf02d-f106-4bf7-932b-b4c6ea6ee95e",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttackRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}